# intel-vca2-dkms

./: README.md  build_debs.sh
apps/: CMakeLists.txt  MANIFEST  make.spec  make_rpm.mk  vcactl.1
apps/bash_completion/: vcactl
apps/kvm_scripts/: kvmsetup.sh
apps/pkg_scripts/: postinst  preinst
apps/scripts/: make_config.py  vca_config_upgrade.sh  vca_setup_ubuntu22.sh
apps/src/: helper_funcs.cpp  helper_funcs.h  linux_osal.cpp  vca_blockio_ctl.cpp  vca_blockio_ctl.h  vca_config_parser.cpp  vca_config_parser.h  vca_defs.h  vca_eeprom_update.cpp  vca_eeprom_update.h  vca_watchdog.cpp  vcactrl.cpp  vcactrl.h  vcassd.c  vcassd.h  vcassd_common.c  vcassd_common.h  vcassd_virtio_backend.c  vcassd_virtio_backend.h  windows_osal.cpp
apps/tools/: vca_image_resize.sh  vcainfo
apps/vca_config.d/: vca_config.xml
debian/: changelog  control  copyright  daemon-vca.postinst  daemon-vca.postrm  daemon-vca.prerm  rules  vca2-host-modprobe.conf  vca2-load-modules  vca2-vcass-modules-dkms.postinst  vca2-vcass-modules-dkms.prerm  vca2-vcass.dkms.conf
modules/: Kbuild  MANIFEST  Makefile  load_host_core.sh  make.spec  postinstall-pak
modules/scripts/: vca_agent.sh
modules/vca/blockio/hal_pci/: vcablk_bcknd_hal_pci.c  vcablk_hal_pci.c  vcablk_hal_pci.h
modules/vca/blockio/vcablk/: vcablk_disk.c
modules/vca/blockio/vcablk_bcknd/: vcablk_bcknd.c  vcablk_bcknd_disk.c  vcablk_bcknd_media.c
modules/vca/blockio/vcablk_common/: vcablk_common.h
modules/vca/blockio/vcablk_test/hal_test/: vcablk_bcknd_hal_test.c
modules/vca/bus/: vca_csa_bus.c  vca_csm_bus.c  vca_mgr_bus.c  vca_mgr_extd_bus.c  vop_bus.c  vop_bus.h
modules/vca/common/: vca_common.h  vca_dev_common.h
modules/vca/include/: vca_ioctl_impl.h  vca_linux_6x_compat.h
modules/vca/plx87xx/: plx_alm.c  plx_boot.c  plx_debugfs.c  plx_device.h  plx_hw.c  plx_hw_ops_blockio.c  plx_hw_ops_vca_csm.c  plx_intr.h  plx_lbp.c  plx_lbp.h  plx_lbp_ifc.h  plx_main.c  plx_procfs.c
modules/vca/plx87xx_dma/: plx_debugfs.c  plx_dma.c  plx_dma.h
modules/vca/vca_csa/: vca_csa_main.c  vca_csa_sysfs.c
modules/vca/vca_csm/: vca_csm_main.c
modules/vca/vca_mgr/: vca_mgr_main.c
modules/vca/vca_mgr_extd/: vca_mgr_extd_main.c
modules/vca/vca_virtio/: vca_virtio.c  vca_virtio_net.c  vca_virtio_ring.c
modules/vca/vca_virtio/include/: vca_virtio_ring.h
modules/vca/vop/: vop_common.c  vop_debugfs.c  vop_kvec_buff.c  vop_main.c  vop_vringh.c
